fixed windows showing horizontal scrolling bar though not sure if it's a good fix...

--- a/main.css
+++ b/main.css
@@ -12,6 +12,7 @@
 /* cross-page layouts */
 body {
     background-color: #f0f0f0;
+    overflow-x: hidden;
 }
 body > header > nav {
     background-color: #4b2e83;  /* UW Huskies purple! Love UW! <3 */
@@ -92,7 +93,7 @@ header > nav a.nav-link {
 }
 
 body.modal-open {  /* stop modal from blocking the page */
-    overflow: scroll !important;
+    overflow-y: scroll !important;
 }
 .modal-backdrop {  /* don't dim the page */
     --bs-backdrop-opacity: 0;
